# libulam

./: .clang-format  .gitignore  Makefile.am  autogen.sh  configure.ac  readme.md
docs/: overview.md  ulam-diff.md
include/libulam/: assert.hpp  ast.hpp  context.hpp  diag.hpp  lang.hpp  lex.hpp  options.hpp  parser.hpp  preproc.hpp  sema.hpp  semantic.hpp  src.hpp  src_loc.hpp  src_mngr.hpp  str_pool.hpp  token.hpp  token.inc.hpp  types.hpp
include/libulam/ast/: context.hpp  expr_visitor.hpp  node.hpp  nodes.hpp  nodes.inc.hpp  ptr.hpp  str.hpp  traversal.hpp  visitor.hpp
include/libulam/detail/: variant.hpp
include/libulam/lang/: class.hpp  fun.hpp  op.hpp  op.inc.hpp  ops.hpp  ops.inc.hpp  params.hpp  scope.hpp  string.hpp  symbol.hpp  type.hpp  value.hpp  var.hpp
include/libulam/memory/: buf.hpp  notepad.hpp  ptr.hpp
include/libulam/sema/: array_dim_eval.hpp  cast.hpp  class_resolver.hpp  dep_track.hpp  eval.hpp  export_import.hpp  expr_error.hpp  expr_res.hpp  expr_visitor.hpp  helper.hpp  init.hpp  init_members.hpp  param_eval.hpp  resolve_deps.hpp  resolver.hpp  type_init.hpp  type_resolver.hpp  visitor.hpp
include/libulam/semantic/: class.hpp  decl.hpp  export.hpp  export_import.hpp  expr_res.hpp  fun.hpp  fun_ops.inc.hpp  import.hpp  mangler.hpp  module.hpp  number.hpp  ops.hpp  ops.inc.hpp  params.hpp  ph_type.hpp  program.hpp  scope.back.hpp  scope.hpp  symbol.hpp  symbol_id.hpp  type.hpp  type_id_gen.hpp  type_ops.hpp  type_tpl.hpp  typed_value.hpp  value.hpp  var.hpp
include/libulam/utils/: integer.hpp  leximited.hpp
libulam/: diag.hpp  lex.hpp  meta.hpp  options.hpp  parser.hpp  preproc.hpp  sema.hpp  src.hpp  src_loc.hpp  src_man.hpp  token.hpp  token.inc.hpp  types.hpp
libulam/ast/: expr_nodes.inc.hpp  expr_visitor.hpp  node.hpp  nodes.hpp  nodes.inc.hpp  str.hpp  visitor.hpp
libulam/ast/nodes/: access.hpp  args.hpp  expr.hpp  exprs.hpp  module.hpp  params.hpp  root.hpp  stmt.hpp  var_decl.hpp  var_def.hpp
libulam/memory/: buf.hpp  ptr.hpp
libulam/meta/: field.hpp  field.inc.hpp  fields.inc.hpp  id.hpp  type.hpp
libulam/parser/: lex.hpp  options.hpp  preproc.hpp  token.hpp  token.inc.hpp
libulam/sema/: class_resolver.hpp  eval.hpp  init.hpp  resolver.hpp
libulam/sema/eval/: base.hpp  cond.hpp  cond_res.hpp  env.hpp  except.hpp  flags.hpp  funcall.hpp  helper.hpp  init.hpp  options.hpp  stack.hpp  visitor.hpp
libulam/semantic/: def.hpp  fun.hpp  fun_ops.inc.hpp  mangler.hpp  module.hpp  number.hpp  ops.hpp  ops.inc.hpp  prim_types.inc.hpp  program.hpp  scope.hpp  symbol.hpp  type.hpp  type_ops.hpp  type_ops.inc.hpp  type_tpl.hpp  typed_value.hpp  types.inc.hpp  value.hpp  var.hpp
libulam/semantic/scope/: fun.hpp  iter.hpp  module.hpp  program.hpp  view.hpp
libulam/semantic/type/: class.hpp  class_kind.hpp  class_name_kind.hpp  class_tpl.hpp  conv.hpp  element.hpp  prim.hpp  visitor.hpp
libulam/semantic/utils/: class_name.hpp  strf.hpp
libulam/semantic/value/: bits.hpp  bound_fun_set.hpp  flags.hpp  types.hpp
libulam/semantic/var/: base.hpp
libulam/utils/: file.hpp  integer.hpp
src/: context.cpp  context.hpp  debug.hpp  diag.cpp  lex.cpp  lex.hpp  lexer.cpp  lexer.hpp  meta.cpp  parser.cpp  parser.hpp  preproc.cpp  preproc.hpp  sema.cpp  source.cpp  source.hpp  source_manager.cpp  source_manager.hpp  src.cpp  src.hpp  src_loc.cpp  src_man.cpp  src_mngr.cpp  src_mngr.hpp  str_pool.cpp  str_pool.hpp  str_storage.cpp  str_storage.hpp  token.cpp
src/ast/: expr_visitor.cpp  node.cpp  traversal.cpp  visitor.cpp
src/ast/nodes/: expr.cpp  module.cpp  root.cpp
src/detail/: str.hpp  string.hpp  variant.hpp
src/lang/: op.cpp  ops.cpp  symbol.cpp  type.cpp
src/lexer/: dfa.cpp  dfa.hpp
src/memory/: buf.cpp  buf.hpp  notepad.cpp  notepad.hpp  str_buf.cpp  str_buf.hpp
src/meta/: field.cpp  parser.cpp  parser.hpp
src/parser/: lex.cpp  number.cpp  number.hpp  preproc.cpp  string.cpp  string.hpp  token.cpp
src/sema/: array_dim_eval.cpp  cast.cpp  class_resolver.cpp  eval.cpp  export_import.cpp  expr_res.cpp  expr_visitor.cpp  init.cpp  init_members.cpp  out.cpp  out.hpp  param_eval.cpp  resolve_deps.cpp  resolver.cpp  type_init.cpp  type_resolver.cpp  visitor.cpp
src/sema/debug/: out.cpp
src/sema/eval/: base.cpp  cast.cpp  cond.cpp  env.cpp  except.cpp  expr_visitor.cpp  funcall.cpp  helper.cpp  init.cpp  stack.cpp  visitor.cpp  which.cpp
src/sema/helper/: array_dim_eval.cpp  param_eval.cpp  resolver.cpp  type_resolver.cpp
src/sema/resolver/: class.cpp
src/semantic/: class.cpp  decl.cpp  def.cpp  export.cpp  fun.cpp  mangler.cpp  module.cpp  number.cpp  ops.cpp  program.cpp  scope.cpp  symbol.cpp  type.cpp  type_ops.cpp  type_tpl.cpp  value.cpp  var.cpp
src/semantic/detail/: integer.hpp  leximited.cpp  leximited.hpp
src/semantic/scope/: context.cpp  iter.cpp  iterator.cpp  stack.cpp  view.cpp
src/semantic/type/: builtin_type_id.cpp  builtins.cpp  class.cpp  class_kind.cpp  class_tpl.cpp  conv.cpp  element.cpp  ops.cpp  prim.cpp  visitor.cpp
src/semantic/utils/: class_name.cpp  strf.cpp
src/semantic/value/: array.cpp  bit_vector.cpp  bits.cpp  bound.cpp  bound_fun_set.cpp  data.cpp  object.cpp
src/semantic/var/: base.cpp
src/source/: line_buf.cpp  line_buf.hpp  line_storage.cpp  line_storage.hpp
src/utils/: file.cpp  leximited.cpp  unreachable.hpp
tests/ULAM/: answer.cpp  answer.hpp  compiler.cpp  compiler.hpp  driver.cpp  eval.cpp  eval.hpp  out.cpp  out.hpp  parser.cpp  parser.hpp  prop_str.cpp  prop_str.hpp  test_case.cpp  test_case.hpp  type_str.cpp  type_str.hpp  utils.cpp  utils.hpp
tests/ast/: print.cpp  print.hpp  print1.cpp  print1.hpp
tests/eval/: virtual.cpp
tests/lex/: basic.cpp
tests/lexer/: basic.cpp
tests/memory/: notepad1.cpp  str_buf1.cpp
tests/meta/: class1.cpp  parse1.cpp
tests/parser/: cast1.cpp  expr.cpp  init_list1.cpp
tests/sema/: basic.cpp  class_member.cpp  color.cpp  color_utils.cpp  common.cpp  common.hpp  expr.cpp  simple_inheritance.cpp
tests/semantic/: bits.cpp
tests/source/: copy1.cpp  read.cpp  str_buf_store1.cpp
tools/lexer/: dfagen.cpp
(+155 files in other folders)
